# MEMCF

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
configs/: env.example
data/: README.md
scripts/: run_video_game.sh
src/agent_memcf/: __init__.py  __main__.py  evaluation.py  experiment.py  io_utils.py  memory_system.py  models.py  training.py
